add docker environments and update build readme